Sat Sep  6 11:28:46 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (purge_missing): Call MYDBM_REORG() after
	  deleting entries. Currently only useful for gdbm.

Sat Sep  6 00:23:03 BST 2003  Colin Watson  <cjwatson@debian.org>

	* acinclude.m4 (MAN_CHECK_BDB): Append to DBLIBS rather than LIBS.
	* configure.in: Likewise for gdbm and ndbm tests. Make DBLIBS an
	  output variable.
	* src/Makefile.in: Link only the necessary programs with the
	  database library.

Sat Sep  6 00:15:37 BST 2003  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (make_content): Cast cont.dsize to size_t when
	  comparing it with the return value of strlen(). Avoids warning
	  when building with gdbm.

Thu Sep  4 20:22:21 BST 2003  Christian Rose  <menthos@menthos.com>

	* po/sv.po: Update from Translation Project.

Fri Aug 29 17:46:40 BST 2003  Michael Piefel <piefel@informatik.hu-berlin.de>

	* po/de.po: Update from Translation Project.

Fri Aug 29 17:42:15 BST 2003  Giuseppe Sacco  <eppesuig@debian.org>

	* po/it.po: Updated after the revision in tp@linux.it.

Thu Aug 28 11:19:21 BST 2003  Christian Rose  <menthos@menthos.com>

	* po/sv.po: Update from Translation Project.

Thu Aug 28 00:45:50 BST 2003  Jordi Mallach  <jordi@sindominio.net>

	* po/ca.po: Update from Translation Project.

Thu Aug 28 00:43:33 BST 2003  Christian Rose  <menthos@menthos.com>

	* po/sv.po: Update from Translation Project.

Thu Aug 28 00:40:09 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_start): Change "couldn't exec %s" to
	  "can't execute %s" in line with src/man.c, to make translators'
	  lives easier.
	  (pipeline_wait): Separate "%s: %s%s" into two translatable
	  strings: the "(core dumped)" portion should definitely be
	  translated.
	* src/accessdb.c (usage): Clarify "man_database" to "(The) man
	  database".

Thu Aug 28 00:18:46 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (usage): Expand "sec" to "section".
