@@ -1,3 +1,10 @@
+Sat Sep  6 11:53:06 BST 2003  Colin Watson  <cjwatson@debian.org>
+
+	* src/encodings.c (get_source_encoding): Implement encodings in
+	  manual hierarchy directory names. Include a mini-rant about the
+	  bizarre specification for these in FHS 2.1, which I've declined to
+	  implement for now.
+
 Sat Sep  6 11:28:46 BST 2003  Colin Watson  <cjwatson@debian.org>
 
 	* src/check_mandirs.c (purge_missing): Call MYDBM_REORG() after
